--- a/view/css/call/view.css
+++ b/view/css/call/view.css
@@ -183,6 +183,7 @@ div#main ul#list>li {
 
 #social-logo li.email {
     padding-left: 0px !important;
+    margin-top: 10px;
 }
 
 #social-logo li.email a {
