[portada] espacio entre convocatorias (quizás solo para cuando no hay carrusel)

--- a/view/css/home.css
+++ b/view/css/home.css
@@ -396,9 +396,13 @@ div.callrow a.next {
 
 /* esto es chungo de la muerte, falla en mac */
 /* Convocatorias */
+body.home div#main div.widget.calls div.callrow {
+    margin-bottom: 20px;
+}
+
 div#calls a.prev {
     top: 121px;
-    left: -295px;
+    left: -312px;
 }
 
 div#campaigns a.prev {
