--- a/view/css/node/home.css
+++ b/view/css/node/home.css
@@ -346,6 +346,10 @@ body.node.home div.node-projects ul li div.image div.tagmark {
     padding-left: 25px;
 }
 
+body.node.home div.node-projects ul li div.image div.tagmark.aqua {
+    background:url('/view/css/node/tagmark_aqua.png') 0 0 no-repeat;
+}
+
 body.node.home div.node-projects ul li div.image div.tagmark.green {
     background:url('/view/css/node/tagmark_green.png') 0 0 no-repeat;
 }
