--- a/nodesys/_andalucia_azul/view/css/config.css
+++ b/nodesys/_andalucia_azul/view/css/config.css
@@ -73,6 +73,10 @@ div.widget .title{
 }
 
 /* Esquinas del banderolo largo */
+div.widget.project-support div.tagmark.aqua {
+    background-image:url('project/long_tagmark_aqua.png') !important;
+}
+
 div.widget.project-support div.tagmark.green {
     background-image:url('project/long_tagmark_green.png') !important;
 }
