--- a/view/bazar/css/pc.css
+++ b/view/bazar/css/pc.css
@@ -1,10 +1,25 @@
-body{width:100%;text-align:center;
-height:auto;margin:auto;}
-header {width:100%;height:250px;}
-header.helemento{width:90%;height:150px;margin:auto;text-align:center;background-color:lightblue;}
-img.logo {float:left;width:20%;margin-left:10%;}
-img.logoele {float:left;width:10%;margin-left:10%;}
-h1 {font-size:3.5rem;float:left;margin-top:11%;margin-left:12%;}
+/* pc  (min-width:1024px) and (max-width:1400px) */
+h1 {font-size:4rem;margin-top:30px;}
+h2 {font-size:2.5rem; margin-top:25px;}
+#encabezado {font-size: 1.4rem; margin: 20px auto;}
+article.activable {max-width: 350px;}
+
+div.formfields {width: 45%; margin-right: 20px;}
+
+div#fields-address,
+div#fields-investor {
+  float: left;
+}
+
+div#field-message,
+div#anonm {
+  clear: both;
+  width: 40%;
+}
+
+
+/*
+header {width:80%;height:250px;margin: 0 auto;}
 h1.ele{font-size:150%;text-align:center;margin:60px 0 0 80px;}
  #encabezado {width:90%;height:200px;float:left;
   font-size:1.20rem;padding-left:50px; }
@@ -49,3 +64,4 @@ footer img.goteo {width:25%;height:200px;margin-left:35%;}
 #caja p.precio{
 	margin-top:-12px;
 }
+*/
