--- a/view/bazar/css/tablet.css
+++ b/view/bazar/css/tablet.css
@@ -1,11 +1,14 @@
+/* Tablet (min-width:750px) and (max-width:1024px) */
+h1 {font-size:3rem; margin-top:20px;}
+h2 {font-size:2rem; margin-top:20px;}
+#encabezado {font-size: 1.1rem; margin: 10px auto;}
+article.activable {max-width: 330px;}
+
+/*
 body{width:100%;text-align:center;
 height:auto;margin:auto;}
 header {width:100%;height:250px;}
 img.logo {float:left;width:20%;margin-left:10%;}
-h1 {font-size:3.5rem;
-	float:left;
-	margin-top:11%;
-	margin-left:10%;}
 	h1.ele{font-size:150%;text-align:center;margin:60px 0 0 80px;}
 header.helemento{width:90%;height:150px;margin:auto;text-align:center;}
 img.logoele {float:left;width:10%;margin-left:10%;}
@@ -56,3 +59,4 @@ article p.desc{width:50%;
 			font-size:80%;}
 footer {width:100%;height:300px;}
 footer img.goteo {width:25%;height:300px;margin-left:35%;}
+*/
