--- a/view/bazar/css/mobile.css
+++ b/view/bazar/css/mobile.css
@@ -1,8 +1,25 @@
 /* Mobile (min-width:340px) and (max-width:750px) */
 header, header nav {width: 100%;}
+header nav {margin-bottom: 5px;}
 header a.logo, footer a.logo {display: none;}
+footer section.logo2 {display: inline-block;}
 
-article.activable {max-width: none; }
+section {margin: 0 10px;}
+
+article.header.prod {width: 90%;}
+article img.item {max-width: 150px; }
+
+div.caja {
+  height:50px;
+  min-width: 50px;
+}
+div.caja p.precio {
+  line-height:42px;
+  font-size: 1.3em;
+  padding: 0 15px;
+}
+
+ul.share li.facebook {margin: 0;}
 
 footer {width: 100%;}
 
